# industrial-risk-control

./: .gitattributes  .gitignore  AGENTS.md  AUTOMATION_PROOF.md  CITATION.cff  CONTRIBUTING.md  GITHUB_ACTIONS_RUNBOOK.md  GITHUB_AUTOMATION_REPORT.md  GITHUB_PUBLISH_INSTRUCTIONS.md  LICENSE  LOCAL_FULL_RUN_SUMMARY.md  LOCAL_VALIDATION_REPORT.md  MICRO_CYCLE_REPORT.md  Makefile  NEXT_ACTIONS.md  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
claims/: CLAIM_EVIDENCE_MATRIX.csv
decisions/: DECISION_LOG.md
deployment/: aws_or_oracle_vm_notes.md  github_actions_runner_notes.md  self_hosted_runner_notes.md  ubuntu_setup.md
docs/: ARCHITECTURE.md  CI_CD.md  CV_PROJECT_SUMMARY.md  REPRODUCIBILITY.md  cloud-proof-storage-pilot.md
environment/: requirements-lock.txt
experiments/: EXPERIMENT_PLAN.md
hypotheses/: HYPOTHESES_RANKED.csv
infra/: README.md
literature/: GAP_MAP.md
protocol/: CYCLE_SPEC.yaml  PREREGISTRATION.md  RUN_STATE.json
reports/: FACTORY_STATUS.md
results/: CHECKSUMS.sha256  MANIFEST.json  compact_summary.json  confirmation_summary.csv  pilot_summary.csv
scripts/: export_compact_proof.py  finalize_cycle.py  run_local_ci.ps1  run_local_ci.sh  run_local_cloud_proof_equivalent.ps1  run_local_cloud_proof_equivalent.sh  run_local_full.ps1  run_local_full.sh  run_local_research_discovery.ps1  run_local_research_discovery.sh  run_local_smoke.ps1  run_local_smoke.sh  run_micro_experiment.py  run_research_discovery.py  run_validation_only.ps1  run_validation_only.sh  run_vertical_cycle.py  (+4 more)
(+56 files in other folders)
