[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-research-automation-lab"
version = "0.1.0"
description = "Reproducible near-critical industrial risk simulations and research automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0,<3",
  "numba>=0.61,<0.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pyyaml>=6,<7",
]

[project.scripts]
industrial-lab = "industrial_research_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
